@@ -20,8 +20,6 @@
 #ifndef ZABBIX_WATCHDOG_H
 #define ZABBIX_WATCHDOG_H
 
-extern	int	CONFIG_NODEID;
-
 void main_watchdog_loop();
 
 #endif
